# paralela_testing_noarr

./: README.md  polybench-c.csv
PolybenchC-4.2.1/: CMakeLists.txt  build.sh
PolybenchC-4.2.1/datamining/correlation/: correlation.c
PolybenchC-4.2.1/datamining/covariance/: covariance.c
PolybenchC-4.2.1/linear-algebra/blas/gemm/: gemm.c
PolybenchC-4.2.1/linear-algebra/blas/gemver/: gemver.c
PolybenchC-4.2.1/linear-algebra/blas/gesummv/: gesummv.c
PolybenchC-4.2.1/linear-algebra/blas/symm/: symm.c
PolybenchC-4.2.1/linear-algebra/blas/syr2k/: syr2k.c
PolybenchC-4.2.1/linear-algebra/blas/syrk/: syrk.c
PolybenchC-4.2.1/linear-algebra/blas/trmm/: trmm.c
PolybenchC-4.2.1/linear-algebra/kernels/2mm/: 2mm.c
PolybenchC-4.2.1/linear-algebra/kernels/3mm/: 3mm.c
PolybenchC-4.2.1/linear-algebra/kernels/atax/: atax.c
PolybenchC-4.2.1/linear-algebra/kernels/bicg/: bicg.c
PolybenchC-4.2.1/linear-algebra/kernels/doitgen/: doitgen.c
PolybenchC-4.2.1/linear-algebra/kernels/mvt/: mvt.c
PolybenchC-4.2.1/linear-algebra/solvers/cholesky/: cholesky.c
PolybenchC-4.2.1/linear-algebra/solvers/durbin/: durbin.c
PolybenchC-4.2.1/linear-algebra/solvers/gramschmidt/: gramschmidt.c
PolybenchC-4.2.1/linear-algebra/solvers/lu/: lu.c
PolybenchC-4.2.1/linear-algebra/solvers/ludcmp/: ludcmp.c
PolybenchC-4.2.1/linear-algebra/solvers/trisolv/: trisolv.c
PolybenchC-4.2.1/medley/deriche/: deriche.c
PolybenchC-4.2.1/medley/floyd-warshall/: floyd-warshall.c
PolybenchC-4.2.1/medley/nussinov/: nussinov.c
PolybenchC-4.2.1/stencils/adi/: adi.c
PolybenchC-4.2.1/stencils/fdtd-2d/: fdtd-2d.c
PolybenchC-4.2.1/stencils/heat-3d/: heat-3d.c
PolybenchC-4.2.1/stencils/jacobi-1d/: jacobi-1d.c
PolybenchC-4.2.1/stencils/jacobi-2d/: jacobi-2d.c
PolybenchC-4.2.1/stencils/seidel-2d/: seidel-2d.c
PolybenchC-Noarr/: CMakeLists.txt  build.sh  collect.sh  compare.sh  run_c_algorithm.sh  run_noarr_algorithm.sh
PolybenchC-Noarr/datamining/correlation/: correlation.cpp  correlation.hpp
PolybenchC-Noarr/datamining/covariance/: covariance.cpp  covariance.hpp
PolybenchC-Noarr/include/: defines.hpp
PolybenchC-Noarr/linear-algebra/blas/gemm/: gemm.cpp  gemm.hpp
PolybenchC-Noarr/linear-algebra/blas/gemver/: gemver.cpp  gemver.hpp
PolybenchC-Noarr/linear-algebra/blas/gesummv/: gesummv.cpp  gesummv.hpp
PolybenchC-Noarr/linear-algebra/blas/symm/: symm.cpp  symm.hpp
PolybenchC-Noarr/linear-algebra/blas/syr2k/: syr2k.cpp  syr2k.hpp
PolybenchC-Noarr/linear-algebra/blas/syrk/: syrk.cpp  syrk.hpp
PolybenchC-Noarr/linear-algebra/blas/trmm/: trmm.cpp  trmm.hpp
PolybenchC-Noarr/linear-algebra/kernels/2mm/: 2mm.cpp  2mm.hpp
PolybenchC-Noarr/linear-algebra/kernels/3mm/: 3mm.cpp  3mm.hpp
PolybenchC-Noarr/linear-algebra/kernels/atax/: atax.cpp  atax.hpp
PolybenchC-Noarr/linear-algebra/kernels/bicg/: bicg.cpp  bicg.hpp
PolybenchC-Noarr/linear-algebra/kernels/doitgen/: doitgen.cpp  doitgen.hpp
PolybenchC-Noarr/linear-algebra/kernels/mvt/: mvt.cpp  mvt.hpp
PolybenchC-Noarr/linear-algebra/solvers/cholesky/: cholesky.cpp  cholesky.hpp
PolybenchC-Noarr/linear-algebra/solvers/durbin/: durbin.cpp  durbin.hpp
PolybenchC-Noarr/linear-algebra/solvers/gramschmidt/: gramschmidt.cpp  gramschmidt.hpp
PolybenchC-Noarr/linear-algebra/solvers/lu/: lu.cpp  lu.hpp
PolybenchC-Noarr/linear-algebra/solvers/ludcmp/: ludcmp.cpp  ludcmp.hpp
PolybenchC-Noarr/linear-algebra/solvers/trisolv/: trisolv.cpp  trisolv.hpp
PolybenchC-Noarr/medley/deriche/: deriche.cpp  deriche.hpp
PolybenchC-Noarr/medley/floyd-warshall/: floyd-warshall.cpp  floyd-warshall.hpp
PolybenchC-Noarr/medley/nussinov/: nussinov.cpp  nussinov.hpp
PolybenchC-Noarr/stencils/adi/: adi.cpp  adi.hpp
PolybenchC-Noarr/stencils/fdtd-2d/: fdtd-2d.cpp  fdtd-2d.hpp
PolybenchC-Noarr/stencils/heat-3d/: heat-3d.cpp  heat-3d.hpp
PolybenchC-Noarr/stencils/jacobi-1d/: jacobi-1d.cpp  jacobi-1d.hpp
PolybenchC-Noarr/stencils/jacobi-2d/: jacobi-2d.cpp  jacobi-2d.hpp
PolybenchC-Noarr/stencils/seidel-2d/: seidel-2d.cpp  seidel-2d.hpp
examples/matrix/: implmatrix_snipplets.cpp
results/: polybench-c.csv
scripts/: generate_plots.sh  parse_data.sh  plot-compiles.R  plot-others.R  plot-para.R  plot-polybench.R  plot-statistics.R  run-measurements-CPU.sh
